--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 
 # Site settings
-title: Nikhita Raghunath
-name: Nikhita Raghunath
-subtitle: Learnings, Ramblings and Rants
+title: Esakki
+name: Esakki Ganesan
+subtitle: Code. Travel. Eat. Repeat.
 email: nikitaraghunath@gmail.com
 description: >
   A personal website about technical things I find useful. Also, random ramblings and rants.
 baseurl: ""
-url: "https://nikhita.github.io/"
+url: "https://esakkig.github.io/"
 twitter_username: TheNikhita
 github_username:  nikhita
 disqus_baseurl: "https://nikhita.github.io/"
